# Aqbota-v3

ESP32/ENCODER/src/: main.cpp
MEGA motor/: oldcode.cpp  platformio.ini
MEGA motor/lib/config/: lino_base_config.h
MEGA motor/lib/motor/: Motor.cpp  Motor.h
MEGA motor/src/: main.cpp
RPI control/motor/: package.xml
RPI control/motor/src/: motor.py
teensy/firmware/lib/motor/: Motor.cpp
teensy/firmware/src/: main.cpp
teensy — копия/firmware/: platformio.ini
teensy — копия/firmware/lib/config/: lino_base_config.h
teensy — копия/firmware/lib/imu/: I2Cdev.cpp
teensy — копия/firmware/lib/motor/: Motor.h
teensy — копия/firmware/lib/ros_lib/: ArduinoTcpHardware.h
teensy — копия/firmware/src/: main.cpp
